# CleitonQ

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  ROADMAP.md  SECURITY.md  audit.toml
.github/: ISSUE_DRAFT_pqc_roadmap.md
.github/workflows/: arm-bench.yml  no-std.yml  python-wheels.yml  real-pcap.yml  rpi5-bench.yml  security-audit.yml  softhsm2.yml
benches/: pqc_bench.rs
capi/: CMakeLists.txt  Cargo.toml
capi/cmake/: CleitonQConfig.cmake.in
capi/examples/: CMakeLists.txt  arm_disarm.c
capi/include/: cleitonq.h
capi/src/: lib.rs
cleitonq-python/: Cargo.toml  README.md  pyproject.toml
cleitonq-python/cleitonq/: __init__.py
cleitonq-python/src/: lib.rs
cleitonq-python/tests/: test_basic.py
docs/: authentication-architecture.md  key_ceremony.md
examples/: basic_session.rs  mavlink_c2.rs  mavlink_udp_link.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_verify_channel.rs  fuzz_verify_dsa.rs
rfc/: CLEITONQ_RFC_001.md  cleitonq.xml
ros2-cleitonq/: CMakeLists.txt  package.xml
ros2-cleitonq/include/cleitonq_ros2/: channel_auth.hpp
ros2-cleitonq/launch/: auth_demo.launch.py
ros2-cleitonq/msg/: AuthTag.msg  DsaSignature.msg
ros2-cleitonq/src/: auth_drone_node.cpp  auth_gcs_node.cpp
src/: channel.rs  dsa.rs  fips205.rs  hsm.rs  hybrid.rs  kem.rs  lib.rs  nonce.rs  rotation.rs  sealed.rs  signer.rs
tests/: dos_stress.rs  mitm_active.rs
tools/: mavproxy_relay_strip_poc.py  ros2_bridge_strip_poc.py
tools/wireshark/: cleitonq_chunk.lua  gen_cleitonq_pcap.py  gen_real_pcap.py
