[package]
name = "cleitonq"
version = "0.1.1"
edition = "2021"
authors = ["Cleiton Augusto Correa Bezerra <augusto.cleiton@gmail.com>"]
description = "Post-quantum authenticated command & control for embedded and autonomous systems"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cleitonaugusto/CleitonQ"
homepage = "https://github.com/cleitonaugusto/CleitonQ"
documentation = "https://docs.rs/cleitonq"
readme = "README.md"
keywords = ["post-quantum", "cryptography", "embedded", "mavlink", "security"]
categories = ["cryptography", "embedded", "network-programming"]
rust-version = "1.75"

[features]
default = ["std"]
# Full std: file I/O, SystemTime, OS-RNG-based key generation.
std = ["alloc", "ml-kem/getrandom", "ml-dsa/getrandom"]
# Heap allocation only — no OS services. For RTOS / embedded with allocator.
alloc = []

[dependencies]
# Post-quantum cryptography — NIST FIPS 203/204
ml-kem = { version = "0.3" }
ml-dsa = { version = "0.1", default-features = false, features = ["alloc", "rand_core"] }
rand_core = { version = "0.10", default-features = false }

# Symmetric authentication
hmac = { version = "0.12", default-features = false }
sha3 = { version = "0.10", default-features = false }

# Utility
zeroize = { version = "1.7", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
hex = "0.4"
mavlink = { version = "0.18", default-features = false, features = ["std", "dialect-common"] }

[[bench]]
name = "pqc_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
