[package]
name = "cleitonq"
version = "0.2.0"
edition = "2021"
authors = ["Cleiton Augusto Correa Bezerra <augusto.cleiton@gmail.com>"]
description = "Post-quantum authenticated command & control for embedded and autonomous systems"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cleitonaugusto/CleitonQ"
homepage = "https://github.com/cleitonaugusto/CleitonQ"
documentation = "https://docs.rs/cleitonq"
readme = "README.md"
keywords = ["post-quantum", "cryptography", "embedded", "mavlink", "security"]
categories = ["cryptography", "embedded", "network-programming"]
rust-version = "1.75"

[features]
default = ["std"]
# Full std: file I/O, SystemTime, OS-RNG-based key generation.
std = ["alloc", "ml-kem/getrandom", "ml-dsa/getrandom"]
# Heap allocation only — no OS services. For RTOS / embedded with allocator.
alloc = []
# Hybrid classical/PQC key establishment (X25519 + ML-KEM-1024).
# Enables HybridEncapsulator and HybridDecapsulator. Implies std.
hybrid = ["std", "dep:x25519-dalek"]
# HSM-backed signing via PKCS#11 (SoftHSM2, YubiHSM2, Thales Luna).
# Enables Pkcs11Signer in cleitonq::hsm. Requires std.
pkcs11 = ["std", "dep:cryptoki"]
# TPM2 key storage on embedded (RPi5, Jetson Orin, Cortex-A76).
# Enables Tpm2Signer in cleitonq::hsm. Requires std + Linux.
tpm2 = ["std", "dep:tss-esapi"]

[dependencies]
# Post-quantum cryptography — NIST FIPS 203/204
ml-kem = { version = "0.3" }
ml-dsa = { version = "0.1", default-features = false, features = ["alloc", "rand_core"] }
rand_core = { version = "0.10", default-features = false }

# Symmetric authentication
hmac = { version = "0.12", default-features = false }
sha3 = { version = "0.10", default-features = false }

# Classical key exchange (hybrid mode)
x25519-dalek = { version = "2.0", optional = true, features = ["static_secrets"] }

# HSM / PKCS#11 backend
cryptoki = { version = "0.12", optional = true }

# TPM2 backend — only alpha available as of 2026-06; pin to exact version
tss-esapi = { version = "=8.0.0-alpha.2", optional = true }

# Utility
zeroize = { version = "1.7", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
hex = "0.4"
mavlink = { version = "0.18", default-features = false, features = ["std", "dialect-common"] }

[[bench]]
name = "pqc_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
