[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "cleitonq"
version = "0.1.0"
description = "Post-quantum authenticated C2 for embedded and autonomous systems"
authors = [{ name = "Cleiton Augusto Correa Bezerra", email = "augusto.cleiton@gmail.com" }]
license = { text = "MIT OR Apache-2.0" }
readme = "README.md"
requires-python = ">=3.8"
keywords = ["post-quantum", "cryptography", "mavlink", "drone", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Security :: Cryptography",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "cleitonq._cleitonq"
python-source = "."
